--- a/projects/ring-chart/package.json
+++ b/projects/ring-chart/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ring-chart",
-  "version": "0.0.1",
+  "name": "st-ring-chart",
+  "version": "0.0.3",
   "peerDependencies": {
     "@angular/common": "^9.0.7",
     "@angular/core": "^9.0.7",
