add baseHref to deployment options

--- a/angular.json
+++ b/angular.json
@@ -164,7 +164,9 @@
         },
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
-          "options": {}
+          "options": {
+            "baseHref": "ring-chart"
+          }
         }
       }
     }
