--- a/projects/ring-chart/package.json
+++ b/projects/ring-chart/package.json
@@ -1,7 +1,8 @@
 {
   "name": "st-ring-chart",
   "repository": "shimital/ring-chart",
-  "version": "1.0.3",
+  "author": "shimital",
+  "version": "1.0.4",
   "license": "MIT",
   "keywords": [
     "angular",
