--- a/projects/ring-chart/package.json
+++ b/projects/ring-chart/package.json
@@ -2,13 +2,17 @@
   "name": "st-ring-chart",
   "repository": "shimital/ring-chart",
   "author": "shimital",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "license": "MIT",
   "keywords": [
     "angular",
     "angular9",
     "ring-chart",
-    "pie-chart"
+    "pie-chart",
+    "component",
+    "angular-component",
+    "doughnut",
+    "doughnut-chart"
   ],
   "peerDependencies": {
     "@angular/common": "^9.0.7",
